package decorator;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();
}
